hphp/hack/test/typecheck/coeffects/closures_subtyping_explicit.bad.php.exp
File "closures_subtyping_explicit.bad.php", line 4, characters 10-31:
Invalid return type (Typing[4403])
  File "closures_subtyping_explicit.bad.php", line 3, characters 51-57:
  Expected a function that requires the capability set {Rx, WriteProperty}
  File "closures_subtyping_explicit.bad.php", line 4, characters 12-24:
  But got a function that requires the capability set {RxLocal, WriteProperty}
File "closures_subtyping_explicit.bad.php", line 8, characters 10-31:
Invalid return type (Typing[4403])
  File "closures_subtyping_explicit.bad.php", line 7, characters 49-50:
  Expected a function that requires the capability set {}
  File "closures_subtyping_explicit.bad.php", line 8, characters 12-24:
  But got a function that requires the capability WriteProperty
File "closures_subtyping_explicit.bad.php", line 13, characters 12-33:
Invalid return type (Typing[4403])
  File "closures_subtyping_explicit.bad.php", line 12, characters 58-64:
  Expected a function that requires the capability set {Rx, WriteProperty}
  File "closures_subtyping_explicit.bad.php", line 13, characters 14-26:
  But got a function that requires the capability set {RxLocal, WriteProperty}
File "closures_subtyping_explicit.bad.php", line 17, characters 12-33:
Invalid return type (Typing[4403])
  File "closures_subtyping_explicit.bad.php", line 16, characters 56-57:
  Expected a function that requires the capability set {}
  File "closures_subtyping_explicit.bad.php", line 17, characters 14-26:
  But got a function that requires the capability WriteProperty
File "closures_subtyping_explicit.bad.php", line 25, characters 22-23:
Invalid argument (Typing[4403])
  File "closures_subtyping_explicit.bad.php", line 21, characters 40-46:
  Expected a function that requires the capability set {Rx, WriteProperty}
  File "closures_subtyping_explicit.bad.php", line 24, characters 10-22:
  But got a function that requires the capability set {RxLocal, WriteProperty}
